# matrix

./: .travis.yml  CMakeLists.txt  README.md  _c_make_lists_8txt.html  annotated.html  class_data-members.html  class_data.html  class_i_proxy-members.html  class_i_proxy.html  class_i_proxy__inherit__graph.dot  class_i_proxy__inherit__graph.md5  class_matrix-members.html  class_matrix.html  class_matrix__coll__graph.dot  class_matrix__coll__graph.md5  class_matrix__inherit__graph.dot  class_matrix__inherit__graph.md5  class_proxy-members.html  class_proxy.html  class_proxy__coll__graph.dot  class_proxy__coll__graph.md5  class_proxy__inherit__graph.dot  class_proxy__inherit__graph.md5  classes.html  data_8h.html  data_8h__dep__incl.dot  data_8h__dep__incl.md5  data_8h__incl.dot  data_8h__incl.md5  data_8h_source.html  data__helpers_8h.html  data__helpers_8h__dep__incl.dot  data__helpers_8h__dep__incl.md5  data__helpers_8h__incl.dot  data__helpers_8h__incl.md5  data__helpers_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.conf.in  files.html  functions.html  (+37 more)
search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  enums_0.js  enumvalues_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  (+1 more)
src/: data.h  data_helpers.h  indexes.h  main.cpp  proxy.h  sparse_matrix.h
tst/: data-test.cpp  sparse_matrix-test.cpp
